# greyhound

./: .gitignore  CHANGELOG.md  CLAUDE.md  Makefile  README.md  RELEASE_PROCESS.md  pyproject.toml
.claude/agents/: numerical-reviewer.md
.github/: dependabot.yml
.github/actions/setup-venv/: action.yml
.github/workflows/: deploy-docs.yml  main.yml  pr_checks.yml
docs/: astro.config.mjs  package-lock.json  package.json
docs/content/docs/: api.md  benchmarking.md  index.md  installation.md
docs/content/docs/api/: functional.md  modules.md
docs/content/docs/bonus/: newton_schulz.md
docs/content/docs/development/: changelog.md
docs/content/docs/kernels/: causal_conv1d.md  chunked_linear_cross_entropy.md  cross_entropy.md  selective_log_softmax.md
docs/content/docs/strategies/: chunked_linear_loss.md
docs/public/assets/: gpu-picker.js
docs/public/assets/plots_html/: causal_conv1d_backward_speed_activation=silu_batch_size=8_dtype=bfloat16_width=4_NVIDIA_GeForce_RTX_4090.html  causal_conv1d_forward_speed_activation=silu_batch_size=8_dtype=bfloat16_width=4_NVIDIA_GeForce_RTX_4090.html  causal_conv1d_full_speed_activation=silu_batch_size=8_dtype=bfloat16_width=4_NVIDIA_B200.html  causal_conv1d_full_speed_activation=silu_batch_size=8_dtype=bfloat16_width=4_NVIDIA_GeForce_RTX_4090.html  causal_conv1d_full_speed_activation=silu_batch_size=8_dtype=bfloat16_width=4_NVIDIA_H100_80GB_HBM3.html  chunked_linear_cross_entropy_backward_memory_batch_size=8192_dtype=bfloat16_NVIDIA_GeForce_RTX_4090.html  chunked_linear_cross_entropy_backward_speed_batch_size=8192_dtype=bfloat16_NVIDIA_GeForce_RTX_4090.html  chunked_linear_cross_entropy_forward_memory_batch_size=8192_dtype=bfloat16_NVIDIA_GeForce_RTX_4090.html  chunked_linear_cross_entropy_forward_speed_batch_size=8192_dtype=bfloat16_NVIDIA_GeForce_RTX_4090.html  chunked_linear_cross_entropy_full_memory_batch_size=8192_dtype=bfloat16_NVIDIA_B200.html  chunked_linear_cross_entropy_full_memory_batch_size=8192_dtype=bfloat16_NVIDIA_GeForce_RTX_4090.html  chunked_linear_cross_entropy_full_memory_batch_size=8192_dtype=bfloat16_NVIDIA_H100_80GB_HBM3.html  chunked_linear_cross_entropy_full_speed_batch_size=8192_dtype=bfloat16_NVIDIA_B200.html  (+21 more)
docs/styles/: starlight.css
scripts/: generate_api_docs.py  prepare_changelog.py  release.sh  release_notes.py  run_modal_benchmarks.py
src/benchmarks/: causal_conv1d_bench.py  chunked_linear_cross_entropy_bench.py  cross_entropy_with_grad_bench.py  logprobs_bench.py  newton_schulz_bench.py  plot_from_csv.py  utils.py
src/benchmarks/data/: benchmark_data.csv
src/greyhound/: testing.py  utils.py  version.py
src/greyhound/bonus/: newton_schultz.py
src/greyhound/kernels/: causal_conv1d.py  cross_entropy.py  logprobs.py  tuning_utils.py
src/greyhound/nn/: __init__.py  causal_conv1d.py  functional.py
src/greyhound/ops/: causal_conv1d.py  chunked_linear_cross_entropy.py  chunked_linear_loss.py  cross_entropy.py  logprobs.py
src/tests/nn/: causal_conv1d_test.py
(+5 files in other folders)
